@@ -1,5 +1,10 @@
 2008-07-15  Mirco Bauer <meebey@meebey.net> 
 
+	* MainWindow.cs, Frontend.cs, GnomeUI.cs, ChatViewManager.cs: Failed attempt
+	  to fix trac bug #50
+
+2008-07-15  Mirco Bauer <meebey@meebey.net> 
+
 	* MainWindow.cs, FindGroupChatDialog.cs,
 	  gtk-gui/Smuxi.Frontend.Gnome.FindGroupChatDialog.cs, gtk-gui/gui.stetic:
 	  Implemented FindGroupChatDialog (closes trac bug #13).
